--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -5,8 +5,10 @@
   text-align: center;
 }
 .socialLinks{
-  width: 350px;
+  max-width: 350px;
+  width: 100%;
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-between;
   margin: 0 auto;
   border: 1px solid;
@@ -17,4 +19,10 @@
 
 .copyright{
   background-color: #7cdc58;
+}
+
+@media (max-width: 400px) {
+  .socialLinks{
+    display: block;
+  }
 }
