--- a/src/Components/MainBlock/MainBlock.module.css
+++ b/src/Components/MainBlock/MainBlock.module.css
@@ -1,28 +1,64 @@
 .mainBlock{
-  height: 100vh;
+  min-height: 100vh;
   background-color: #dcb7c2;
 }
 
 .mainBlockContent{
   display: flex;
-  height: 100%;
+  min-height: 100vh;
   align-items: center;
 }
 
 .welcomeBlock{
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  border: 2px solid;
+  flex-wrap: wrap;
+  border: 1px solid;
 }
 
 .welcome{
-  width: 300px;
+  max-width: 300px;
+  text-align: center;
   background-color: azure;
 }
 .photo{
-  width: 300px;
-  height: 400px;
-  background-color: azure;
+  position: relative;
+  flex: 0 0 60%;
+  padding: 0 0 58% 0;
+  overflow: hidden;
+}
+.photo img{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+@media (max-width: 940px)  {
+  .welcomeBlock{
+    display: block;
+    width: 100%;
+    margin-bottom: 20px;
+  }
+  .welcome{
+    display: block;
+    max-width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .mainBlock, .mainBlockContent{
+    min-height: 70vh;
+  }
+}
+
+@media (max-width: 500px)  {
+
+  .welcome h1{
+    font-size: 18px;
+  }
 }
