--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@ body.lock {
 }
 
 body {
+  font-family: 'Poppins', sans-serif;
+  font-size: 15px;
+  font-weight: 500;
+  line-height: 1.6;
+  color: #666;
   overflow-x: hidden;
   min-width: 320px;
 }
