--- a/src/Components/common/styles/Container.module.css
+++ b/src/Components/common/styles/Container.module.css
@@ -1,12 +1,7 @@
 .container {
-  max-width: 80%;
+  max-width: 1140px;
+  width: 100%;
   height: 100%;
   margin: 0 auto;
-  padding: 0 10px;
-  border: 1px solid;
-}
-@media (max-width: 768px) {
-  .container{
-    max-width: 90%;
-  }
+  padding: 0 15px;
 }
