--- a/src/Components/Header/Navbar/Navbar.module.scss
+++ b/src/Components/Header/Navbar/Navbar.module.scss
@@ -1,34 +1,33 @@
-.list {
+@import "src/common/styles/mixins/mixins";
+@import "src/common/styles/variables/variables";
 
+
+.list {
   li {
     position: relative;
-    width: 50px;
-    height: 50px;
+    @include wh(50px, 50px);
     display: flex;
     align-items: center;
     transition: .3s;
     margin: 20px 0;
     border-radius: 50%;
-    background: #eee;
+    background: $elementsBc;
 
     a {
-      width: 100%;
-      height: 100%;
+      @include wh(100%, 100%);
 
       .icon {
         position: absolute;
-        top: 50%;
-        left: 50%;
+        @include leftTop(50%, 50%);
         font-size: 19px;
         transform: translate(-50%, -50%);
-        color: #666;
         transition: .3s;
       }
     }
   }
 
   .active {
-    background: #f72b1c;
+    background: $primaryColor;
 
     .icon {
       color: #fff;
