--- a/src/common/components/Title/Title.module.scss
+++ b/src/common/components/Title/Title.module.scss
@@ -1,3 +1,6 @@
+@import "src/common/styles/variables/variables";
+@import "src/common/styles/mixins/mixins";
+
 .title {
   text-align: center;
   position: relative;
@@ -5,16 +8,13 @@
   padding: 80px 0;
 
   h1 {
-    font-family: 'Poppins', sans-serif;;
-    color: #666;
-    font-size: 56px;
-    font-weight: 900;
+    @include font(56px, 900);
     text-transform: uppercase;
     margin: 0;
 
     span {
       text-transform: uppercase;
-      color: #f72b1c;
+      color: $primaryColor;
     }
   }
 
@@ -26,17 +26,14 @@
   }
 
   .titleBg {
-    font-family: 'Poppins', sans-serif;
     color: rgba(30, 37, 48, 0.07);
-    font-size: 110px;
-    left: 0;
+    @include font(110px, 800);
+    @include leftTop(0,50%);
     letter-spacing: 10px;
     line-height: 0.7;
     position: absolute;
     right: 0;
-    top: 50%;
     text-transform: uppercase;
-    font-weight: 800;
     transform: translateY(-50%);
   }
 }
