--- a/src/common/styles/variables/variables.scss
+++ b/src/common/styles/variables/variables.scss
@@ -1,9 +1,18 @@
 // colors
 
-$primaryColor : #f72b1c;
+$primaryColor: #f72b1c;
 $elementsBc: #eee;
 $secondTextColor: #777;
 
 // fonts
 
-$secondFont : 'Open Sans', sans-serif;
+$secondFont: 'Open Sans', sans-serif;
+
+
+// media
+$mobileXS: 374.98px;
+$mobile: 575.98px;
+$lSPhones: 767.98px;
+$tablets: 991.98px;
+$desktops: 1199.98px;
+$xl: 1440px;
