--- a/src/Components/Header/Header.module.scss
+++ b/src/Components/Header/Header.module.scss
@@ -1,3 +1,5 @@
+@import "src/common/styles/variables/variables";
+
 .header {
   position: fixed;
   right: 30px;
@@ -10,4 +12,10 @@
   opacity: 1;
   transition: opacity 0.3s;
   -webkit-transition: opacity 0.3s;
+}
+
+@media (max-width: $tablets) {
+    .header{
+      display: none;
+    }
 }
