--- a/src/Components/About/PersonalInfoBox/PersonalBox/ProfileRow/ProfileRow.module.scss
+++ b/src/Components/About/PersonalInfoBox/PersonalBox/ProfileRow/ProfileRow.module.scss
@@ -3,7 +3,6 @@
 
 .profileRow {
   display: flex;
-  flex-wrap: wrap;
   margin: 0 -15px;
 
   .profileColumn {
@@ -29,3 +28,21 @@
   }
 }
 
+@media (max-width: $mobile) {
+  .profileRow {
+    .profileColumn {
+      ul {
+        li {
+          .spanTitle {
+            font-size: 14px;
+          }
+
+          .spanValue {
+            display: block;
+            font-size: 14px;
+          }
+        }
+      }
+    }
+  }
+}
