--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,5 @@
+@import "src/common/styles/variables/variables.scss";
+
 /* GLOBAL STYLES */
 html {
   box-sizing: border-box;
@@ -15,6 +17,7 @@ body {
   height: 100%;
   position: relative;
 }
+
 html.lock,
 body.lock {
   overflow: hidden;
@@ -41,6 +44,22 @@ li {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+
+.burgerMenuBlock {
+  display: none;
+  position: relative;
+  background-color: $elementsBc;
+  width: 100%;
+  height: 62px;
+}
+
+@media (max-width: $tablets) {
+  .burgerMenuBlock {
+    display: flex;
+    align-items: center;
+  }
 }
 
 
