--- a/src/Components/About/Experience/ExperienceItem/ExperienceItem.module.scss
+++ b/src/Components/About/Experience/ExperienceItem/ExperienceItem.module.scss
@@ -1,6 +1,12 @@
 @import "src/common/styles/mixins/mixins";
 @import "src/common/styles/variables/variables";
 
+
+.experienceItemWrapper {
+  flex: 0 0 50%;
+  padding: 0 15px;
+}
+
 .experienceItem {
   position: relative;
   padding: 0 20px 0 60px;
@@ -82,6 +88,39 @@
       top: 0;
       left: 20px;
       bottom: 0;
+    }
+  }
+}
+
+@media (max-width: 1280px) and (min-width: $tablets) {
+  .experienceItemWrapper {
+    flex: 0 0 46%;
+  }
+}
+
+@media (max-width: $tablets) {
+  .experienceItemWrapper {
+    flex: 0 0 100%;
+  }
+}
+
+@media (max-width: $mobile) {
+  .experienceItem {
+    .positionBlock {
+      display: block;
+
+      .position {
+        @include font(17px, 500);
+        margin: 0;
+      }
+
+      .company {
+        padding-left: 0;
+
+        &::before {
+          display: none;
+        }
+      }
     }
   }
 }
