--- a/src/Components/About/PersonalInfoBox/BoxStats/StatsItem/StatsItem.module.scss
+++ b/src/Components/About/PersonalInfoBox/BoxStats/StatsItem/StatsItem.module.scss
@@ -50,3 +50,46 @@
     }
   }
 }
+
+@media (max-width: $tablets) {
+  .boxStartsColumn {
+    flex: 0 0 50%;
+    padding: 0 15px;
+    margin-bottom: 30px;
+    border-radius: 5px;
+
+    .boxStartsItem {
+      padding: 15px 20px 20px 25px;
+
+      h3 {
+        @include font(40px, 700);
+        &::after {
+          content: '+';
+          position: absolute;
+          right: -24px;
+          @include font(33px, 300);
+          top: 2px;
+        }
+      }
+
+      p {
+        padding-left: 0;
+        font-family: $secondFont;
+        text-transform: uppercase;
+        position: relative;
+        margin: 0;
+        font-size: 14px;
+
+        &::before {
+          display: none;
+        }
+
+        span {
+          display: block;
+          font-family: $secondFont;
+          text-transform: uppercase
+        }
+      }
+    }
+  }
+}
