--- a/src/Components/Header/BurgerMenu/BurgerMenu.module.scss
+++ b/src/Components/Header/BurgerMenu/BurgerMenu.module.scss
@@ -2,18 +2,15 @@
 
 .burgerMenu {
   display: none;
+  width: 54px;
+  height: 54px;
+  border-radius: 5px;
+  z-index: 1;
+  margin-left: auto;
 }
 
 @media (max-width: $tablets) {
   .burgerMenu {
-    position: absolute;
-    top: 0;
-    right: 30px;
-    background: $elementsBc;
-    border-radius: 5px;
-    margin-top: 30px;
-    display: flex;
-    align-items: center;
-    z-index: 1;
+display: flex;
   }
 }
