--- a/src/common/components/CustomTitle/CustomTitle.module.scss
+++ b/src/common/components/CustomTitle/CustomTitle.module.scss
@@ -1,4 +1,5 @@
 @import "src/common/styles/mixins/mixins";
+@import "src/common/styles/variables/variables";
 
 .customTitle h3 {
   @include font(26px, 600);
@@ -6,4 +7,11 @@
   text-align: center;
   margin: 0;
   padding-bottom: 48px;
+}
+
+@media (max-width: $mobile) {
+  .customTitle h3{
+    @include font(21px, 600);
+    text-align: left;
+  }
 }
