--- a/src/common/styles/container/Container.module.scss
+++ b/src/common/styles/container/Container.module.scss
@@ -1,7 +1,22 @@
+@import "src/common/styles/variables/variables";
+
 .container {
   max-width: 1140px;
   width: 100%;
   height: 100%;
   margin: 0 auto;
   padding: 0 15px;
+}
+
+
+@media (max-width: $tablets) {
+  .container {
+    max-width: 720px;
+  }
+}
+
+@media (max-width: $lSPhones) {
+  .container {
+    max-width: 540px;
+  }
 }
