--- a/src/common/styles/variables/variables.scss
+++ b/src/common/styles/variables/variables.scss
@@ -10,7 +10,8 @@ $secondFont: 'Open Sans', sans-serif;
 
 
 // media
-$mobileXS: 374.98px;
+$mobileXXS: 360px;
+$mobileXS: 375px;
 $mobile: 575.98px;
 $lSPhones: 767.98px;
 $tablets: 991.98px;
