--- a/src/Components/Contacts/ContactsBox/ContactsBox.module.scss
+++ b/src/Components/Contacts/ContactsBox/ContactsBox.module.scss
@@ -75,3 +75,27 @@
     }
   }
 }
+
+@media (max-width: $tablets) {
+  .boxContacts {
+    flex: 0 0 100%;
+    padding: 0;
+    margin-bottom: 48px;
+  }
+}
+
+@media (max-width: $mobile) {
+  .boxContacts {
+    h3 {
+      font-size: 21px;
+    }
+
+    p {
+      font-size: 14px;
+    }
+
+    .myContacts {
+      font-size: 14px;
+    }
+  }
+}
