--- a/src/Components/Home/Home.module.scss
+++ b/src/Components/Home/Home.module.scss
@@ -77,8 +77,11 @@
   }
 }
 
+
 @media (max-width: $tablets) {
   .mainBlockContent {
+    height: 100%;
+    margin-top: 30px;
     .colorBlock {
       display: none;
     }
@@ -148,10 +151,20 @@
   }
 }
 
-@media (max-width: $mobileXS) {
+@media (max-width: $mobileXXS) {
   .mainBlockContent {
+    margin-top: 10px;
     .welcomeBlock {
+      .photo{
+        width: 100px;
+        height: 100px;
+        margin-bottom: 5px;
+      }
       .aboutMe {
+        &Info {
+          font-size: 14px;
+          line-height: 22px;
+        }
         .me {
           h1 {
             font-size: 26px;
