--- a/src/Components/Contacts/Form/Form.module.scss
+++ b/src/Components/Contacts/Form/Form.module.scss
@@ -68,6 +68,7 @@
     letter-spacing: .5px;
     border: none;
     cursor: pointer;
+    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
   }
 }
 
