--- a/src/Components/About/PersonalInfoBox/PersonalBox/ProfileRow/ProfileRow.module.scss
+++ b/src/Components/About/PersonalInfoBox/PersonalBox/ProfileRow/ProfileRow.module.scss
@@ -22,6 +22,10 @@
 
         .spanValue {
           font-weight: 600;
+
+          a {
+            color: #666;
+          }
         }
       }
     }
