--- a/src/Components/Contacts/Form/Form.module.scss
+++ b/src/Components/Contacts/Form/Form.module.scss
@@ -28,6 +28,7 @@
       transition: .1s;
     }
   }
+
   .error {
     position: absolute;
     bottom: 3px;
@@ -39,8 +40,9 @@
     overflow: hidden;
   }
 
-  .textareaBox{
+  .textareaBox {
     position: relative;
+
     textarea {
       text-transform: uppercase;
       border: 1px solid #ddd;
@@ -54,6 +56,7 @@
       transition: .1s;
     }
   }
+
   button {
     background-color: $primaryColor;
     border-radius: 26px;
@@ -62,13 +65,13 @@
     overflow: hidden;
     padding: 0 40px;
     color: #fff;
-    @include font(15px,500);
+    @include font(15px, 500);
     line-height: 46px;
     text-transform: uppercase;
     letter-spacing: .5px;
     border: none;
     cursor: pointer;
-    box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
   }
 }
 
@@ -76,6 +79,7 @@
   .contactForm {
     flex: 0 0 100%;
     padding: 0;
+
     button {
       padding: 0 28px !important;
       font-size: 14px !important;
@@ -90,6 +94,7 @@
       flex-direction: column;
       margin: 0;
     }
+
     .inputItem {
       padding: 0;
       flex: 0 0 100%;
