--- a/src/Components/About/PersonalInfoBox/PersonalBox/ProfileRow/ProfileRow.module.scss
+++ b/src/Components/About/PersonalInfoBox/PersonalBox/ProfileRow/ProfileRow.module.scss
@@ -50,3 +50,17 @@
     }
   }
 }
+
+@media (max-width: $mobileXXS) {
+  .profileRow {
+    .profileColumn {
+      ul {
+        li {
+          .spanValue {
+            font-size: 13px;
+          }
+        }
+      }
+    }
+  }
+}
