--- a/src/Components/Header/BurgerMenu/BurgerMenu.module.scss
+++ b/src/Components/Header/BurgerMenu/BurgerMenu.module.scss
@@ -1,5 +1,13 @@
 @import "src/common/styles/variables/variables";
 
+.burgerMenuWrapper{
+  display: none;
+  position: relative;
+  background-color: $elementsBc;
+  width: 100%;
+  height: 62px;
+}
+
 .burgerMenu {
   display: none;
   width: 54px;
@@ -10,7 +18,11 @@
 }
 
 @media (max-width: $tablets) {
-  .burgerMenu {
-display: flex;
+  .burgerMenuWrapper {
+    display: flex;
+    align-items: center;
+    .burgerMenu {
+      display: flex;
+    }
   }
 }
