--- a/src/common/styles/variables/variables.scss
+++ b/src/common/styles/variables/variables.scss
@@ -15,5 +15,6 @@ $mobileXS: 375px;
 $mobile: 575.98px;
 $lSPhones: 767.98px;
 $tablets: 991.98px;
+$ipadPro: 1024px;
 $desktops: 1199.98px;
 $xl: 1440px;
